style updates for sidebar

--- a/app/styles/components/_header.scss
+++ b/app/styles/components/_header.scss
@@ -1,7 +1,6 @@
 header {
-  left: 1rem;
-  position: absolute;
-  top: 1rem;
+  border-bottom: 1px solid $white;
+  padding-bottom: 3rem;
 	text-transform: uppercase;
   z-index: $z-index;
 
