--- a/app/styles/utils/_variables.scss
+++ b/app/styles/utils/_variables.scss
@@ -1,7 +1,9 @@
 // Colors
 $black: #000;
 $white: #fff;
-$grey-dark: #333;
+$grey-dark: #2d2d2d;
+$grey-medium: #828077;
+$grey-light: #e2e2e2;
 
 // Z-Index
 $z-index: 1;
