--- a/app/styles/base/_mixins.scss
+++ b/app/styles/base/_mixins.scss
@@ -1,3 +1,10 @@
+// Global
+@mixin tab-focus() {
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+
 @mixin hide {
   height: 1px;
   clip: rect(0 0 0 0);
@@ -9,8 +16,25 @@
   width: 1px;
 }
 
+// Resets
 @mixin reset-list($margin: 0, $padding: 0) {
   list-style: none;
   margin: $margin;
   padding: $padding;
+}
+
+@mixin reset-links {
+  color: inherit;
+  font-weight: inherit;
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    color: inherit;
+    text-decoration: inherit;
+  }
+
+  &:focus {
+    @include tab-focus;
+  }
 }
