--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,3 +10,5 @@
 // Components
 @import "components/sidebar";
 @import "components/header";
+@import "components/nav";
+@import "components/data-input";
